separating the operations related to ebs csi management into a separate pipeline

--- a/.github/workflows/deploy_iac_aws.yml
+++ b/.github/workflows/deploy_iac_aws.yml
@@ -15,7 +15,7 @@ name: Deploy TFIaC on AWS
         - staging
         - production
         - experimental
-        default: "staging"
+        default: "experimental"
 
 permissions:
   contents: read
@@ -200,73 +200,6 @@ jobs:
           -var="gha_actions_role_arn=${{ secrets.AWS_ROLE_ARN }}" \
           -var="enable_ebs_csi_addon=false"
 
-    - name: Install EBS CSI Driver Add-on (managed)
-      id: ebs_csi_addon
-      run: |
-        echo "🔧 Preparing to install EBS CSI Driver add-on..."
-        # kubectl + identity
-        aws eks update-kubeconfig --name ${{ env.CLUSTER_NAME }} --region ${{ env.AWS_REGION }}
-        echo "🔎 AWS identity:" && aws sts get-caller-identity || true
-        echo "🔎 Nodes:" && kubectl get nodes -o wide || true
-        echo "🔎 kube-system daemonsets:" && kubectl -n kube-system get ds -o wide || true
-
-        # Ensure nodes are Ready before installing
-        echo "⏳ Waiting for nodes to become Ready..."
-        for i in {1..30}; do
-          READY=$(kubectl get nodes --no-headers 2>/dev/null | awk '{print $2}' | grep -c "Ready")
-          if [ "$READY" -ge 1 ]; then
-            echo "✅ Nodes are Ready ($READY)"; break
-          fi
-          echo "...still waiting ($i/30)"; sleep 10
-        done
-
-        # Resolve IRSA role ARN created by Terraform
-        EBS_CSI_ROLE_NAME="${{ env.ENVIRONMENT }}-${{ env.PROJECT_NAME }}-ebs-csi-role"
-        EBS_CSI_ROLE_ARN=$(aws iam get-role --role-name "$EBS_CSI_ROLE_NAME" --query 'Role.Arn' --output text 2>/dev/null || echo "")
-        if [ -z "$EBS_CSI_ROLE_ARN" ] || [ "$EBS_CSI_ROLE_ARN" = "None" ]; then
-          echo "❌ Could not resolve IRSA role ARN for $EBS_CSI_ROLE_NAME. Aborting add-on install."
-          exit 1
-        fi
-
-        # Create or update add-on with short timeout and explicit IRSA role
-        set +e
-        aws eks describe-addon --cluster-name ${{ env.CLUSTER_NAME }} --addon-name aws-ebs-csi-driver --region ${{ env.AWS_REGION }} >/dev/null 2>&1
-        EXISTS=$?
-        set -e
-        if [ $EXISTS -eq 0 ]; then
-          echo "🔄 Updating existing EBS CSI add-on..."
-          aws eks update-addon --cluster-name ${{ env.CLUSTER_NAME }} --addon-name aws-ebs-csi-driver --resolve-conflicts OVERWRITE --region ${{ env.AWS_REGION }} --service-account-role-arn "$EBS_CSI_ROLE_ARN" || true
-        else
-          echo "🆕 Creating EBS CSI add-on..."
-          aws eks create-addon --cluster-name ${{ env.CLUSTER_NAME }} --addon-name aws-ebs-csi-driver --resolve-conflicts OVERWRITE --region ${{ env.AWS_REGION }} --service-account-role-arn "$EBS_CSI_ROLE_ARN" || true
-        fi
-
-        echo "⏳ Waiting for add-on to be ACTIVE (10m max)..."
-        for i in {1..60}; do
-          STATUS=$(aws eks describe-addon --cluster-name ${{ env.CLUSTER_NAME }} --addon-name aws-ebs-csi-driver --query 'addon.status' --output text --region ${{ env.AWS_REGION }} 2>/dev/null || echo UNKNOWN)
-          echo "Add-on status: $STATUS"
-          if [ "$STATUS" = "ACTIVE" ]; then
-            break
-          fi
-          sleep 10
-        done
-        FINAL=$(aws eks describe-addon --cluster-name ${{ env.CLUSTER_NAME }} --addon-name aws-ebs-csi-driver --query 'addon.status' --output text --region ${{ env.AWS_REGION }} 2>/dev/null || echo UNKNOWN)
-        if [ "$FINAL" != "ACTIVE" ]; then
-          echo "❌ EBS CSI add-on not ACTIVE (status=$FINAL). Diagnostics:"
-          aws eks describe-addon --cluster-name ${{ env.CLUSTER_NAME }} --addon-name aws-ebs-csi-driver --query 'addon.health' --output json --region ${{ env.AWS_REGION }} || true
-          echo "🔎 ServiceAccountRoleArn:" && aws eks describe-addon --cluster-name ${{ env.CLUSTER_NAME }} --addon-name aws-ebs-csi-driver --query 'addon.serviceAccountRoleArn' --output text --region ${{ env.AWS_REGION }} || true
-          kubectl -n kube-system get ds,pods -o wide | grep -Ei 'ebs|csi' || true
-          kubectl -n kube-system get events --sort-by=.lastTimestamp | tail -n 100 || true
-          echo "🔎 Describing ebs-csi-controller deployment:" && kubectl -n kube-system describe deploy ebs-csi-controller || true
-          echo "🔎 Logs (ebs-plugin):" && kubectl -n kube-system logs deploy/ebs-csi-controller -c ebs-plugin --tail=200 || true
-          echo "🔎 Logs (csi-attacher):" && kubectl -n kube-system logs deploy/ebs-csi-controller -c csi-attacher --tail=200 || true
-          echo "🔎 Logs (csi-provisioner):" && kubectl -n kube-system logs deploy/ebs-csi-controller -c csi-provisioner --tail=200 || true
-          echo "🔎 Logs (csi-resizer):" && kubectl -n kube-system logs deploy/ebs-csi-controller -c csi-resizer --tail=200 || true
-          echo "🔎 Logs (csi-snapshotter):" && kubectl -n kube-system logs deploy/ebs-csi-controller -c csi-snapshotter --tail=200 || true
-          echo "🔎 Logs (liveness-probe):" && kubectl -n kube-system logs deploy/ebs-csi-controller -c liveness-probe --tail=200 || true
-          exit 1
-        fi
-        echo "✅ EBS CSI add-on ACTIVE"
 
     - name: Skip IAM Resources (Using Manual OIDC Role)
       id: iam
