removing an extra role assumption

--- a/.github/workflows/deploy_codeto_aws.yml
+++ b/.github/workflows/deploy_codeto_aws.yml
@@ -111,8 +111,7 @@ jobs:
       run: |
         aws eks update-kubeconfig \
           --name ${{ env.CLUSTER_NAME }} \
-          --region ${{ env.AWS_REGION }} \
-          --role-arn ${{ steps.iam_role_arn.outputs.github_actions_role_arn }}
+          --region ${{ env.AWS_REGION }}
 
     - name: Verify Cluster Health
       run: |
