--- a/.github/workflows/destroy_iac_aws.yml
+++ b/.github/workflows/destroy_iac_aws.yml
@@ -710,10 +710,10 @@ jobs:
           echo "ℹ️ No VPC found, skipping dependency cleanup"
         fi
 
-    - name: Cleanup Elastic IPs
-      id: eip_cleanup
+    - name: Cleanup EC2 Resources (Pre-VPC)
+      id: ec2_cleanup
       run: |
-        echo "🧹 Cleaning up Elastic IPs to prevent dependency violations..."
+        echo "🧹 Cleaning up EC2 resources to prevent VPC dependency violations..."
         
         # Find VPC ID for this environment
         VPC_ID=$(aws ec2 describe-vpcs \
@@ -723,14 +723,85 @@ jobs:
         if [ "$VPC_ID" != "None" ] && [ "$VPC_ID" != "null" ] && [ ! -z "$VPC_ID" ]; then
           echo "🔍 Found VPC: $VPC_ID"
           
-          # Get all Elastic IPs in this VPC
+          # 1. Delete Load Balancers first (they hold ENIs)
+          echo "🗑️ Cleaning up Load Balancers..."
+          LB_ARNS=$(aws elbv2 describe-load-balancers \
+            --query "LoadBalancers[?VpcId=='$VPC_ID'].LoadBalancerArn" \
+            --output text 2>/dev/null || echo "")
+          
+          if [ ! -z "$LB_ARNS" ] && [ "$LB_ARNS" != "None" ]; then
+            for lb_arn in $LB_ARNS; do
+              if [ -n "$lb_arn" ]; then
+                echo "   🗑️ Deleting Load Balancer: $lb_arn"
+                aws elbv2 delete-load-balancer --load-balancer-arn "$lb_arn" || echo "   ⚠️ Failed to delete $lb_arn"
+              fi
+            done
+          else
+            echo "   ✅ No Load Balancers found"
+          fi
+          
+          # 2. Delete NAT Gateways (they hold EIPs and ENIs)
+          echo "🗑️ Cleaning up NAT Gateways..."
+          NAT_GATEWAYS=$(aws ec2 describe-nat-gateways \
+            --filter "Name=vpc-id,Values=$VPC_ID" \
+            --query "NatGateways[?State!='deleted'].NatGatewayId" \
+            --output text 2>/dev/null || echo "")
+          
+          if [ ! -z "$NAT_GATEWAYS" ] && [ "$NAT_GATEWAYS" != "None" ]; then
+            for nat_gw in $NAT_GATEWAYS; do
+              if [ -n "$nat_gw" ]; then
+                echo "   🗑️ Deleting NAT Gateway: $nat_gw"
+                aws ec2 delete-nat-gateway --nat-gateway-id "$nat_gw" || echo "   ⚠️ Failed to delete $nat_gw"
+              fi
+            done
+          else
+            echo "   ✅ No NAT Gateways found"
+          fi
+          
+          # 3. Delete VPC Endpoints
+          echo "🗑️ Cleaning up VPC Endpoints..."
+          VPC_ENDPOINTS=$(aws ec2 describe-vpc-endpoints \
+            --filters "Name=vpc-id,Values=$VPC_ID" \
+            --query "VpcEndpoints[].VpcEndpointId" \
+            --output text 2>/dev/null || echo "")
+          
+          if [ ! -z "$VPC_ENDPOINTS" ] && [ "$VPC_ENDPOINTS" != "None" ]; then
+            for endpoint_id in $VPC_ENDPOINTS; do
+              if [ -n "$endpoint_id" ]; then
+                echo "   🗑️ Deleting VPC Endpoint: $endpoint_id"
+                aws ec2 delete-vpc-endpoint --vpc-endpoint-id "$endpoint_id" || echo "   ⚠️ Failed to delete $endpoint_id"
+              fi
+            done
+          else
+            echo "   ✅ No VPC Endpoints found"
+          fi
+          
+          # 4. Delete Network Interfaces (ENIs)
+          echo "🗑️ Cleaning up Network Interfaces..."
+          ENI_IDS=$(aws ec2 describe-network-interfaces \
+            --filters "Name=vpc-id,Values=$VPC_ID" \
+            --query "NetworkInterfaces[].NetworkInterfaceId" \
+            --output text 2>/dev/null || echo "")
+          
+          if [ ! -z "$ENI_IDS" ] && [ "$ENI_IDS" != "None" ]; then
+            for eni_id in $ENI_IDS; do
+              if [ -n "$eni_id" ]; then
+                echo "   🗑️ Deleting Network Interface: $eni_id"
+                aws ec2 delete-network-interface --network-interface-id "$eni_id" || echo "   ⚠️ Failed to delete $eni_id"
+              fi
+            done
+          else
+            echo "   ✅ No Network Interfaces found"
+          fi
+          
+          # 5. Release Elastic IPs
+          echo "🗑️ Cleaning up Elastic IPs..."
           EIP_ALLOCATION_IDS=$(aws ec2 describe-addresses \
             --filters "Name=domain,Values=vpc" \
             --query "Addresses[?InstanceId==null && NetworkInterfaceId==null].AllocationId" \
             --output text 2>/dev/null || echo "")
           
           if [ ! -z "$EIP_ALLOCATION_IDS" ] && [ "$EIP_ALLOCATION_IDS" != "None" ]; then
-            echo "🗑️ Found unassociated Elastic IPs, releasing them..."
             for allocation_id in $EIP_ALLOCATION_IDS; do
               if [ -n "$allocation_id" ]; then
                 echo "   🗑️ Releasing EIP: $allocation_id"
@@ -738,34 +809,57 @@ jobs:
               fi
             done
           else
-            echo "✅ No unassociated Elastic IPs found"
+            echo "   ✅ No unassociated Elastic IPs found"
           fi
           
-          # Also check for any EIPs associated with NAT Gateways in this VPC
-          NAT_GATEWAYS=$(aws ec2 describe-nat-gateways \
-            --filter "Name=vpc-id,Values=$VPC_ID" \
-            --query "NatGateways[?State!='deleted'].NatGatewayId" \
+          # 6. Delete Security Groups (except default)
+          echo "🗑️ Cleaning up Security Groups..."
+          SG_IDS=$(aws ec2 describe-security-groups \
+            --filters "Name=vpc-id,Values=$VPC_ID" \
+            --query "SecurityGroups[?GroupName!='default'].GroupId" \
             --output text 2>/dev/null || echo "")
           
-          if [ ! -z "$NAT_GATEWAYS" ] && [ "$NAT_GATEWAYS" != "None" ]; then
-            echo "🔍 Found NAT Gateways, checking for associated EIPs..."
-            for nat_gw in $NAT_GATEWAYS; do
-              NAT_EIP=$(aws ec2 describe-nat-gateways \
-                --nat-gateway-ids "$nat_gw" \
-                --query "NatGateways[0].NatGatewayAddresses[0].AllocationId" \
-                --output text 2>/dev/null || echo "")
-              
-              if [ ! -z "$NAT_EIP" ] && [ "$NAT_EIP" != "None" ]; then
-                echo "   🗑️ Releasing EIP from NAT Gateway: $NAT_EIP"
-                aws ec2 release-address --allocation-id "$NAT_EIP" || echo "   ⚠️ Failed to release $NAT_EIP"
+          if [ ! -z "$SG_IDS" ] && [ "$SG_IDS" != "None" ]; then
+            for sg_id in $SG_IDS; do
+              if [ -n "$sg_id" ]; then
+                echo "   🗑️ Deleting Security Group: $sg_id"
+                aws ec2 delete-security-group --group-id "$sg_id" || echo "   ⚠️ Failed to delete $sg_id"
               fi
             done
+          else
+            echo "   ✅ No custom Security Groups found"
           fi
+          
+          # 7. Delete EBS Volumes (if any)
+          echo "🗑️ Cleaning up EBS Volumes..."
+          VOLUME_IDS=$(aws ec2 describe-volumes \
+            --filters "Name=tag:Project,Values=${{ env.PROJECT_NAME }}" "Name=tag:Environment,Values=${{ env.ENVIRONMENT }}" \
+            --query "Volumes[?State!='deleted'].VolumeId" \
+            --output text 2>/dev/null || echo "")
+          
+          if [ ! -z "$VOLUME_IDS" ] && [ "$VOLUME_IDS" != "None" ]; then
+            for volume_id in $VOLUME_IDS; do
+              if [ -n "$volume_id" ]; then
+                echo "   🗑️ Deleting EBS Volume: $volume_id"
+                aws ec2 delete-volume --volume-id "$volume_id" || echo "   ⚠️ Failed to delete $volume_id"
+              fi
+            done
+          else
+            echo "   ✅ No EBS Volumes found"
+          fi
+          
         else
-          echo "ℹ️ No VPC found, skipping EIP cleanup"
+          echo "ℹ️ No VPC found, skipping EC2 cleanup"
         fi
         
-        echo "✅ Elastic IP cleanup completed"
+        echo "✅ EC2 cleanup completed"
+
+    - name: Wait for EC2 Cleanup Propagation
+      id: wait_ec2_cleanup
+      run: |
+        echo "⏳ Waiting for EC2 resources to fully delete (30s)..."
+        sleep 30
+        echo "✅ EC2 cleanup propagation completed"
 
     - name: Force Detach Internet Gateway
       id: force_detach_igw
